[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"
test = false
doctest = false

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
thiserror = { version = "1.0", default-features = false }
